flapivor/tests/tests-m3/hopix/typechecker/bad/orpatterns3.hopix
type t = A (int) | B (int)

val x = A (3) ? A (x : int) | B (y : int) => x